@@ -8,7 +8,7 @@ from zope.interface import implements, classProvides
 from collective.transmogrifier.interfaces import ISectionBlueprint
 from collective.transmogrifier.interfaces import ISection
 
-from collective.transmogrifier.utils import resolvePackageReference
+from collective.transmogrifier.utils import resolvePackageReferenceOrFile
 from collective.transmogrifier.utils import Matcher
 
 from OFS.Image import File
@@ -22,16 +22,17 @@ class FilesystemSource(object):
     classProvides(ISectionBlueprint)
 
     def __init__(self, transmogrifier, name, options, previous):
+        import pdb; pdb.set_trace( )
         self.transmogrifier = transmogrifier
         self.name = name
         self.options = options
         self.previous = previous
         
-        self.directory  = resolvePackageReference(options['directory'])
+        self.directory  = resolvePackageReferenceOrFile(options['directory'])
         self.metadata   = None
         
         if 'metadata' in options:
-            self.metadata = resolvePackageReference(options['metadata'])
+            self.metadata = resolvePackageReferenceOrFile(options['metadata'])
         
         self.requireMetadata = options.get('require-metadata', 'false').lower() != 'false'
         
