@@ -4,6 +4,10 @@ Changelog
 1.0b2 (Unreleased)
 ------------------
 
+    - Reverted toutpt's change since resolvePackageReferenceOrFile is now 
+      available in a released version of transmogrifier.
+      [zupo]
+
     - update api resolvePackageReferenceOrFile -> resolvePackageReference
       [toutpt]
 
